# llm-attribution-behavior-evaluation

./: .gitignore  AGENTS.md  AGENT_WORKLOG.md  README.md  pyproject.toml  requirements.txt  run_all.ps1
.github/workflows/: apply-clickable-links-fix.yml  ci.yml  pages.yml
configs/: model.deepseek.example.yaml  model.deepseek.local.yaml.example  model.mock.yaml  prompt.v1.yaml  study.default.yaml
configs/benchmarks/: llm_attribution_behavior.v1.yaml
configs/metrics/: attribution_metrics.v1.yaml
configs/tasks/: attribution_behavior.yaml  freewill_attribution.v1.yaml  freewill_attribution.v2.yaml
docs/: STUDY_CARD.md  codex_to_chatgpt_handoff.md  interview_explanation_script.md  measurement_plan.md  paper_draft_simulated_study.md  portfolio_research_case.md  project_one_page_summary.md  project_showcase_summary.md  research_and_measurement_sources.md  research_design_blueprint.md  scale_source_mapping.md
docs/audit/: baseline_hashes.txt  current_state_v0.1.md  repository_rebaseline_assessment.md  research_protocol_source_map.md  v1_provenance_statement.md
docs/benchmark/: BENCHMARK_SPEC.md  FAILURE_TAXONOMY.md  METRIC_SPEC.md
docs/pa-wu-r1-pilot/: app.js  index.html  styles.css
docs/planning/: ARCHITECTURE_PROPOSAL.md  DECISION_LOG.md  EXECUTION_BACKLOG.md  PHASE_GATES.md  PROFESSIONALIZATION_PLAN.md  RISK_REGISTER.md  SHOWCASE_PLAN.md
docs/protocols/: freewill_attribution_v1_historical.md  freewill_attribution_v2.md
outputs/: anova_summary.csv  char_len_summary.csv  controlled_regression_summary.csv  deepseek_simulated_pilot_report.md  domain_robustness_summary.csv  final_simulated_pilot_report.md  grouped_mediation_summary.csv  materials_preview.csv  measurement_and_construct_revision_report.md  mediation_summary.json  method_revision_report.md  n20_construct_validation_report.md  n30_stability_replication_report.md  parallel_mediation_summary.json  planned_contrasts.csv  process_dummy_coefficients.csv  reliability_summary.csv  scale_scores.csv  scenario_robustness_summary.csv
scripts/: apply_clickable_links_fix.py  build_public_report.py  build_showcase_data.py  build_site_data.py  run_all.ps1  run_all.sh
site/: README.md  index.html
src/: analyze_results.py  generate_n20_construct_validation_report.py  generate_n30_stability_replication_report.py  generate_pilot_report.py  path_safety.py  run_simulated_study.py  scales.py  stimuli.py  validate_materials.py
tests/: conftest.py
(+197 files in other folders)
