[project]
name = "llm-agent-free-will-attribution"
version = "0.2.0.dev0"
description = "A reproducible LLM-simulated research prototype for free-will attribution."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    ".venv",
    "artifacts",
    "outputs",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
